external-crates/move/crates/move-compiler/tests/move_2024/expansion/pattern_ellipsis_invalid.exp
error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:10:20
   │
10 │             X::A { .., .. } => 0,
   │                    ^^  -- Ellipsis pattern used again here
   │                    │    
   │                    Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:11:20
   │
11 │             X::B { .., .., .. } => 0,
   │                    ^^  --  -- Ellipsis pattern used again here
   │                    │   │    
   │                    │   Ellipsis pattern used again here
   │                    Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:12:20
   │
12 │             X::B { .., .., x} => x,
   │                    ^^  -- Ellipsis pattern used again here
   │                    │    
   │                    Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:13:20
   │
13 │             X::B { .., x, .. } => x,
   │                    ^^     -- Ellipsis pattern used again here
   │                    │       
   │                    Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:14:18
   │
14 │             X::C(.., x, ..) => 1,
   │                  ^^     -- Ellipsis pattern used again here
   │                  │       
   │                  Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

error[E03015]: invalid pattern
   ┌─ tests/move_2024/expansion/pattern_ellipsis_invalid.move:15:18
   │
15 │             X::C(.., ..) => 1,
   │                  ^^  -- Ellipsis pattern used again here
   │                  │    
   │                  Multiple ellipsis patterns
   │
   = An ellipsis pattern can only appear once in a field constructor.

